package com.aetxabao.invasoresfx.sprite;

import java.util.List;

public interface ICanSpawn {

    List<AEnemy> spawn();

}
