package com.aetxabao.invasoresfx.sprite.weaponry;

import com.aetxabao.invasoresfx.sprite.ASprite;

import java.util.ArrayList;

public abstract class AWeapon {

    public abstract ArrayList<AShot> shoot(ASprite sprite);

}
